# lc

./: .travis.yml  LICENSE  README.md  lc.cabal  package.yaml  stack.yaml
app/: Main.hs
script/: format
src/: Lib.hs  Parser.hs
src/Language/: ELc.hs  Lc.hs
src/Language/ELc/: Parser.hs
src/Language/Lc/: DeBruijn.hs  Parser.hs
src/Language/Lc/Interpreter/: DeBruijn.hs  Dynamic.hs
test/: Spec.hs
test/ELc/: Arbitrary.hs  ExecSpec.hs  ParserSpec.hs
test/Lc/: Arbitrary.hs  DeBruijnSpec.hs  DynamicSpec.hs  Interpreter.hs  NaiveSpec.hs  ParserSpec.hs
