name:                lc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/d-dorazio/lc#readme
license:             BSD3
license-file:        LICENSE
author:              Daniele D'Orazio
maintainer:          d.dorazio96@gmail.com
copyright:           MIT
category:            Lambda Calculus
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                      , Parser
  build-depends:       base >= 4.7 && < 5
                      , megaparsec >= 5 && < 6
                      , pretty >= 1.1 && < 2
  default-language:    Haskell2010

executable lc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lc
  default-language:    Haskell2010

test-suite lc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lc
                     , QuickCheck >= 2 && < 3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/d-dorazio/lc
