name:                lc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/d-dorazio/lc#readme
license:             BSD3
license-file:        LICENSE
author:              Daniele D'Orazio
maintainer:          d.dorazio96@gmail.com
copyright:           MIT
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:      Language.ELc
                      , Language.ELc.Parser
                      , Language.Lc
                      , Language.Lc.DeBruijn
                      , Language.Lc.Parser
  build-depends:        base >= 4.7 && < 5
                      , containers >= 0.5 && < 0.6
                      , megaparsec >= 5 && < 6
                      , mtl >= 2 && < 3
                      , pretty >= 1.1 && < 2
  default-language:    Haskell2010

executable lc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskeline >= 0.7 && < 0.8
                     , lc
                     , megaparsec >= 5 && < 6
                     , mtl >= 2 && < 3
                     , pretty >= 1.1 && < 2
  default-language:    Haskell2010

test-suite lc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       ELc.Arbitrary
                     , ELc.ExecSpec
                     , ELc.ParserSpec
                     , Lc.Arbitrary
                     , Lc.DeBruijnSpec
                     , Lc.Interpreter
                     , Lc.NaiveSpec
                     , Lc.ParserSpec
  main-is:             Spec.hs
  build-depends:       base
                     , containers >= 0.5 && < 0.6
                     , hspec >= 2.0 && < 3.0
                     , lc
                     , megaparsec >= 5 && < 6
                     , mtl >= 2 && < 3
                     , pretty >= 1.1 && < 2
                     , safe >= 0.3 && < 0.4
                     , QuickCheck >= 2 && < 3
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/d-dorazio/lc
